# eds-gtasks

./: configure.ac
calendar/backends/: Makefile.am
calendar/backends/gtasks/: Makefile.am  e-cal-backend-gtasks-factory.c  e-cal-backend-gtasks.c  e-cal-backend-gtasks.h  e-gdata-oauth2-authorizer.c
libedataserver/: Makefile.am  e-source-tasklist-id.c  e-source-tasklist-id.h  e-source.c  libedataserver.h
modules/google-backend/: module-google-backend.c
